[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/docks/dock_layers.gd" type="Script" id=1]
[ext_resource path="res://src/themes/editor_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/themes/editor_theme/panel_stylebox_section_title.tres" type="StyleBox" id=3]
[ext_resource path="res://src/themes/editor_theme/button_theme_transparent.tres" type="Theme" id=4]

[node name="DockLayers" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1000.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PagesHeading" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 31.0
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/VBoxContainer/PagesHeading"]
margin_top = 1.0
margin_right = 1000.0
margin_bottom = 31.0
custom_constants/margin_right = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/PagesHeading/MarginContainer"]
margin_left = 8.0
margin_top = 6.0
margin_right = 996.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/PagesHeading/MarginContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 964.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Pages"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPageButton" type="Button" parent="ScrollContainer/VBoxContainer/PagesHeading/MarginContainer/HBoxContainer"]
margin_left = 968.0
margin_right = 988.0
margin_bottom = 18.0
theme = ExtResource( 4 )
text = "+"

[node name="PageList" type="ItemList" parent="ScrollContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 1000.0
margin_bottom = 35.0
allow_rmb_select = true
auto_height = true

[node name="SelectedPageHeading" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 1000.0
margin_bottom = 66.0
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/VBoxContainer/SelectedPageHeading"]
margin_top = 1.0
margin_right = 1000.0
margin_bottom = 31.0
custom_constants/margin_right = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/SelectedPageHeading/MarginContainer"]
margin_left = 8.0
margin_top = 6.0
margin_right = 996.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/SelectedPageHeading/MarginContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 964.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Current Page"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddArtboardButton" type="Button" parent="ScrollContainer/VBoxContainer/SelectedPageHeading/MarginContainer/HBoxContainer"]
margin_left = 968.0
margin_right = 988.0
margin_bottom = 18.0
theme = ExtResource( 4 )
text = "+"

[node name="SelectedPageTree" type="Tree" parent="ScrollContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 1000.0
margin_bottom = 800.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}
